@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project version="4">
   <component name="ChangeListManager">
-    <list default="true" id="92756fba-9448-4539-aaa4-1deb2265cfe0" name="Default" comment="* Moved `pingbacks only panel` and `trackbacks only panel` functionality into Comments class as methods">
+    <list default="true" id="92756fba-9448-4539-aaa4-1deb2265cfe0" name="Default" comment="">
       <change type="MODIFICATION" beforePath="$PROJECT_DIR$/changelog.txt" afterPath="$PROJECT_DIR$/changelog.txt" />
       <change type="MODIFICATION" beforePath="$PROJECT_DIR$/includes/class.OpusPrimusComments.php" afterPath="$PROJECT_DIR$/includes/class.OpusPrimusComments.php" />
       <change type="MODIFICATION" beforePath="$PROJECT_DIR$/comments.php" afterPath="$PROJECT_DIR$/comments.php" />
@@ -9,7 +9,7 @@
     </list>
     <ignored path="opus-primus.iws" />
     <ignored path=".idea/workspace.xml" />
-    <file path="/Dummy.txt" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363893616632" ignored="false" />
+    <file path="/Dummy.txt" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363893650915" ignored="false" />
     <file path="/a.php" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363106901363" ignored="false" />
     <file path="/a.html" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363107087453" ignored="false" />
     <file path="/a.css" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363107067982" ignored="false" />
@@ -19,13 +19,13 @@
     <file path="/search.php" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363187152448" ignored="false" />
     <file path="$PROJECT_DIR$/../../../../website/wp-content/themes/ground-floor/functions.php" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363200238219" ignored="false" />
     <file path="/opus-primus.css" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363809930229" ignored="false" />
-    <file path="/comments.php" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363893426766" ignored="false" />
+    <file path="/comments.php" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363895119447" ignored="false" />
     <file path="/functions.php" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363619661859" ignored="false" />
-    <file path="/changelog.txt" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363893644312" ignored="false" />
+    <file path="/changelog.txt" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363895353596" ignored="false" />
     <file path="/opus-primus-comment-tabs.js" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363621396915" ignored="false" />
     <file path="/readme.txt" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363717783388" ignored="false" />
     <file path="/style.css" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363798136092" ignored="false" />
-    <file path="/class.OpusPrimusComments.php" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363893369916" ignored="false" />
+    <file path="/class.OpusPrimusComments.php" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363895269134" ignored="false" />
     <option name="TRACKING_ENABLED" value="true" />
     <option name="SHOW_DIALOG" value="false" />
     <option name="HIGHLIGHT_CONFLICTS" value="true" />
@@ -48,7 +48,7 @@
       <file leaf-file-name="comments.php" pinned="false" current="false" current-in-tab="false">
         <entry file="file://$PROJECT_DIR$/comments.php">
           <provider selected="true" editor-type-id="text-editor">
-            <state line="113" column="66" selection-start="4875" selection-end="4875" vertical-scroll-proportion="-49.03846">
+            <state line="60" column="68" selection-start="2167" selection-end="2167" vertical-scroll-proportion="-14.384615">
               <folding />
             </state>
           </provider>
@@ -66,7 +66,7 @@
       <file leaf-file-name="class.OpusPrimusComments.php" pinned="false" current="false" current-in-tab="false">
         <entry file="file://$PROJECT_DIR$/includes/class.OpusPrimusComments.php">
           <provider selected="true" editor-type-id="text-editor">
-            <state line="352" column="0" selection-start="11666" selection-end="11666" vertical-scroll-proportion="-35.115383">
+            <state line="463" column="42" selection-start="15221" selection-end="15221" vertical-scroll-proportion="-28.576923">
               <folding />
             </state>
           </provider>
@@ -103,8 +103,8 @@
         <option value="$PROJECT_DIR$/css/opus-primus.css" />
         <option value="$PROJECT_DIR$/style.css" />
         <option value="$PROJECT_DIR$/index.php" />
-        <option value="$PROJECT_DIR$/includes/class.OpusPrimusComments.php" />
         <option value="$PROJECT_DIR$/comments.php" />
+        <option value="$PROJECT_DIR$/includes/class.OpusPrimusComments.php" />
         <option value="$PROJECT_DIR$/changelog.txt" />
       </list>
     </option>
@@ -1743,7 +1743,11 @@
       <created>1363885343201</created>
       <updated>1363885343201</updated>
     </task>
-    <option name="localTasksCounter" value="336" />
+    <task id="LOCAL-00336" summary="* Moved `pingbacks only panel` and `trackbacks only panel` functionality into Comments class as methods">
+      <created>1363893658021</created>
+      <updated>1363893658022</updated>
+    </task>
+    <option name="localTasksCounter" value="337" />
     <servers>
       <GitHub shared="false">
         <commitMessageFormat>{id} {summary}</commitMessageFormat>
@@ -1849,7 +1853,7 @@
     <option name="WRAP_WHEN_TYPING_REACHES_RIGHT_MARGIN" value="false" />
     <option name="FORCE_NON_EMPTY_COMMENT" value="false" />
     <option name="CLEAR_INITIAL_COMMIT_MESSAGE" value="false" />
-    <option name="LAST_COMMIT_MESSAGE" value="* Update to working version 1.2-alpha" />
+    <option name="LAST_COMMIT_MESSAGE" value="* Moved `pingbacks only panel` and `trackbacks only panel` functionality into Comments class as methods" />
     <option name="MAKE_NEW_CHANGELIST_ACTIVE" value="false" />
     <option name="OPTIMIZE_IMPORTS_BEFORE_PROJECT_COMMIT" value="false" />
     <option name="CHECK_FILES_UP_TO_DATE_BEFORE_COMMIT" value="false" />
@@ -1863,7 +1867,6 @@
     <option name="UPDATE_FILTER_BY_SCOPE" value="false" />
     <option name="SHOW_FILE_HISTORY_AS_TREE" value="false" />
     <option name="FILE_HISTORY_SPLITTER_PROPORTION" value="0.6" />
-    <MESSAGE value="* Moved TagLines into its own Stanza&#10;* Tagged as version 1.0.3" />
     <MESSAGE value="* Added 'Breadcrumbs' class&#10;* Moved `breadcrumbs` method from 'Structures' class to 'Breadcrumbs' class&#10;* Removed `hgroup` container from 'opus-primus-header'" />
     <MESSAGE value="* Progress with breadcrumbs is being made ..." />
     <MESSAGE value="* Breadcrumbs for pages complete ... scheduled as part of 1.1.0 release" />
@@ -1888,6 +1891,7 @@
     <MESSAGE value="* Used a more specific HTML element to set background color on comment tabs" />
     <MESSAGE value="* Move `comments only panel` functionality into Comments class as a method" />
     <MESSAGE value="* Update to working version 1.2-alpha" />
+    <MESSAGE value="* Moved `pingbacks only panel` and `trackbacks only panel` functionality into Comments class as methods" />
   </component>
   <component name="XDebuggerManager">
     <breakpoint-manager />
@@ -1968,14 +1972,14 @@
     </entry>
     <entry file="file://$PROJECT_DIR$/comments.php">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="113" column="66" selection-start="4875" selection-end="4875" vertical-scroll-proportion="-49.03846">
+        <state line="60" column="68" selection-start="2167" selection-end="2167" vertical-scroll-proportion="-14.384615">
           <folding />
         </state>
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/includes/class.OpusPrimusComments.php">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="352" column="0" selection-start="11666" selection-end="11666" vertical-scroll-proportion="-35.115383">
+        <state line="463" column="42" selection-start="15221" selection-end="15221" vertical-scroll-proportion="-28.576923">
           <folding />
         </state>
       </provider>
